Integración de campos de entrada para usuario, correo y contraseña
Se agregan inputs con IDs únicos para facilitar la validación con JavaScript. Los placeholders están pensados para guiar al usuario sin saturar la interfaz. Se prioriza claridad y estética editorial.

--- a/inicioregistro.html
+++ b/inicioregistro.html
@@ -12,7 +12,7 @@
 
   <div class="contenedorAsfalto">
     <div class="ladoImagen"></div>
-
+    /*fomulario*/
     <div class="ladoFormulario">
       <div class="introEditorial">
         <img src="IMG/asfaltofashion.png" alt="Logo Asfalto Fashion" class="logo" />
