Implementación de mensajes de error dinámicos por campo
Se incluyen divs con clase 'error' y IDs como 'errorCorreo' para mostrar mensajes personalizados. Esto mejora la experiencia del usuario y permite una defensa técnica clara sobre la validación.

--- a/inicioregistro.html
+++ b/inicioregistro.html
@@ -19,7 +19,7 @@
         <p>Inicia sesión o crea una cuenta para continuar</p>
         <p class="legal">Al continuar, aceptas nuestros Términos de uso y reconoces nuestra Política de privacidad.</p>
       </div>
-
+      /*implemntodeerorres*/
       <form id="loginForm">
         <h2>Iniciar Sesión</h2>
         <input type="text" id="usuario" placeholder="Usuario" />
