Botón de registro y enlace a login institucional
Se agrega botón con texto directo y enlace para cambiar entre vistas. Esto refuerza la navegación y mantiene la coherencia visual del sistema.

--- a/inicioregistro.html
+++ b/inicioregistro.html
@@ -51,7 +51,7 @@
 
         <input type="password" id="password_reg" placeholder="Contraseña" />
         <div class="error" id="errorPasswordReg"></div>
-
+        /*BUTTONES LOGIN/REGISTRO*/
         <button type="submit">Registrar</button>
         <p class="link">¿Ya tienes cuenta? <a id="toLogin">Inicia sesión</a></p>
       </form>
