imagenes que se mostraran en pantalla

--- a/paginaprincipal.html
+++ b/paginaprincipal.html
@@ -9,19 +9,54 @@
 </head>
     <!-- barra de navegación -->
     <header>
-    <nav class="navbarAsfalto">
-      <div class="logoNav">
-        <img src="IMG/asfaltofashion.png" alt="Logo ASFALTOSFASHION" />
-      </div>
-      <ul class="menuNav">
-        <li><a href="#">Inicio</a></li>
-        <li><a href="colecciones.html" class="botonColeccion">Colección</a></li>
-        <li><a href="#">Editorial</a></li>
-        <li><a href="#">Contacto</a></li>
-        </ul>
-      </nav>
+      <nav class="navbarAsfalto">
+        <div class="logoNav">
+          <img src="IMG/asfaltofashion.png" alt="Logo ASFALTOSFASHION" />
+        </div>
+        <ul class="menuNav">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="colecciones.html" class="botonColeccion">Colección</a></li>
+          <li><a href="#">Editorial</a></li>
+          <li><a href="#">Contacto</a></li>
+          </ul>
+        </nav>
     </header>
 <body>
     
+  <!-- imagenes que se mostraran en pantalla -->
+  <main>
+    <section class="pinterest-grid">
+      <article class="pinterest-item"><img src="IMG/marlon.jpg" alt="Fashion 1" /></article>
+      <article class="pinterest-item"><img src="IMG/pablo.jpg" alt="Fashion 2" /></article>
+      <article class="pinterest-item"><img src="IMG/lil wey.jpg" alt="Fashion 3" /></article>
+      <article class="pinterest-item"><img src="IMG/cati.jpg" alt="Fashion 4" /></article>
+      <article class="pinterest-item"><img src="IMG/central.jpg" alt="Fashion 5" /></article>
+
+      <article class="pinterest-item">
+        <a href="gale.html">
+          <img src="IMG/galegale.jpg" alt="Fashion 6" />
+        </a>
+      </article>
+
+      <article class="pinterest-item"><img src="IMG/ober.jpg" alt="Fashion 7" /></article>
+      <article class="pinterest-item"><img src="IMG/polima.jpg" alt="Fashion 8" /></article>
+      <article class="pinterest-item"><img src="IMG/kuroh.jpg" alt="Fashion 9" /></article>
+      <article class="pinterest-item"><img src="IMG/central1.jpg" alt="Fashion 10" /></article>
+
+      <article class="pinterest-item">
+        <a href="desfilethug.html">
+          <img src="IMG/yun tug.jpg" alt="Fashion 11" />
+        </a>
+      </article>
+
+      <article class="pinterest-item"><img src="IMG/duke.jpg" alt="Fashion 12" /></article>
+      <article class="pinterest-item"><img src="IMG/kai.jpg" alt="Fashion 13" /></article>
+      <article class="pinterest-item"><img src="IMG/nene.jpg" alt="Fashion 14" /></article>
+      <article class="pinterest-item"><img src="IMG/cris.jpg" alt="Fashion 15" /></article>
+      <article class="pinterest-item"><img src="IMG/floy.jpg" alt="Fashion 16" /></article>
+    </section>
+  </main>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
