correcion de errores con comentarios en registro y pagina de transicion

--- a/pagmomentanea.html
+++ b/pagmomentanea.html
@@ -12,7 +12,7 @@
     <p class="mensaje">
       Cargando inicio de sesión…<br>
       <strong>CORRECTO</strong><br>
-      Bienvenido <span id="nombreUsuario"></span> a ASFALTOSFASHION
+      Bienvenido <span id="nombreUsuario"></span>
     </p>
     <div class="barraCarga"></div>
   </div>
